--- a/reviews.html
+++ b/reviews.html
@@ -49,8 +49,8 @@
        }
      
        #header-reviews{
-           background-image:url('css/img/ribbons.png') !important;
-           background-size:contain !important;
+           background-image:url('css/img/toys2.jpg') !important;
+           background-size:contain!important;
            height: 300px;
            border-top: .5px solid green; 
           
@@ -116,13 +116,13 @@
             <a class="nav-link" href="programs.html" id="nav-programs">Programs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html" id="nav-enrollment">Enrollment</a>
+            <a class="nav-link" href="index.html" id="nav-enrollment">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" id="nav-tuition">About</a>
+            <a class="nav-link" href="about.html" id="nav-tuition">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" id="nav-reviews">Reviews</a>
+            <a class="nav-link" href="reviews.html" id="nav-reviews">Reviews</a>
           </li>
         </ul>
       </div>
@@ -151,7 +151,7 @@
 			<div class="col-sm-3">
 				<div class="rating-block">
 					<h4>Average user rating</h4>
-					<h2 class="bold padding-bottom-7">4.3 <small>/ 5</small></h2>
+					<h2 class="bold padding-bottom-7">4.5 <small>/ 5</small></h2>
 					<button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
 					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
 					</button>
@@ -177,7 +177,7 @@
 					</div>
 					<div class="pull-left" style="width:180px;">
 						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="5" style="width: 1000%">
+						  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="5" style="width: 100%">
 							<span class="sr-only">80% Complete (danger)</span>
 						  </div>
 						</div>
@@ -190,7 +190,7 @@
 					</div>
 					<div class="pull-left" style="width:180px;">
 						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="4" aria-valuemin="0" aria-valuemax="5" style="width: 80%">
+						  <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="4" aria-valuemin="0" aria-valuemax="5" style="width: 20%">
 							<span class="sr-only">80% Complete (danger)</span>
 						  </div>
 						</div>
@@ -203,7 +203,7 @@
 					</div>
 					<div class="pull-left" style="width:180px;">
 						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="3" aria-valuemin="0" aria-valuemax="5" style="width: 60%">
+						  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="3" aria-valuemin="0" aria-valuemax="5" style="width: 0%">
 							<span class="sr-only">80% Complete (danger)</span>
 						  </div>
 						</div>
@@ -216,7 +216,7 @@
 					</div>
 					<div class="pull-left" style="width:180px;">
 						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="5" style="width: 40%">
+						  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="5" style="width: 0%">
 							<span class="sr-only">80% Complete (danger)</span>
 						  </div>
 						</div>
@@ -229,7 +229,7 @@
 					</div>
 					<div class="pull-left" style="width:180px;">
 						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="5" style="width: 20%">
+						  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="5" style="width: 0%">
 							<span class="sr-only">80% Complete (danger)</span>
 						  </div>
 						</div>
