--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto" id="nav-links">
           <li class="nav-item">
-            <a class="nav-link" href="/project/index.html" id="nav-home">Home
+            <a class="nav-link" href="index.html" id="nav-home">Home
 <!--              <span class="sr-only">(current)</span>-->
             </a>
           </li>
@@ -70,10 +70,10 @@
             <a class="nav-link" href="programs.html" id="nav-programs">Programs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html" id="nav-enrollment">Enrollment</a>
+            <a class="nav-link" href="gallery.html" id="nav-enrollment">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" id="nav-tuition">About</a>
+            <a class="nav-link" href="about.html" id="nav-tuition">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="reviews.html" id="nav-reviews">Reviews</a>
