--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/business-frontpage.css" rel="stylesheet">
+  <link href="css/plc.css" rel="stylesheet">
     
   <!-- Custom fonts -->
   <link href='https://fonts.googleapis.com/css?family=Fontdiner Swanky' rel='stylesheet'>
