--- a/reviews.html
+++ b/reviews.html
@@ -445,8 +445,8 @@
 					<div class="row">
 						<div class="col-sm-3">
 							<img src="http://dummyimage.com/60x60/666/ffffff&text=No+Image" class="img-rounded">
-							<div class="review-block-name"><a href="#">nktailor</a></div>
-							<div class="review-block-date">January 29, 2016<br/>1 day ago</div>
+							<div class="review-block-name"><a href="#">Saadia Akhtar</a></div>
+							<div class="review-block-date">March 06, 2019<br/>1 day ago</div>
 						</div>
 						<div class="col-sm-9">
 							<div class="review-block-rate">
@@ -466,8 +466,8 @@
 								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
 								</button>
 							</div>
-							<div class="review-block-title">this was nice in buy</div>
-							<div class="review-block-description">this was nice in buy. this was nice in buy. this was nice in buy. this was nice in buy this was nice in buy this was nice in buy this was nice in buy this was nice in buy</div>
+							<div class="review-block-title"></div>
+							<div class="review-block-description">Play and Learn has been part of our family for over 4 years, for two of our children. We have been more than satisfied and never had a problem. Ms. Rubina and her staff are professional yet loving, and will treat your child as their own. They provide a wholesome environment enriched with learning and tons of fun for your littlest loved ones. I would greatly recommend Play and Learn to anyone looking for a reliable, trustworthy and devoted child care provider.</div>
 						</div>
 					</div>
 					<hr/>
